--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Rajawali Air</string>
+
+
+    <string name="btn_test_crash">Crash Test</string>
 </resources>
