--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,6 @@
     <string name="resent_code"><u>Resend Code</u></string>
 
 
-    <string name="rajawali_air_logo">Rajawali Air Logo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="rajawali_air_logo">Rajawali Air Logo</string>
@@ -78,4 +77,37 @@
     <string name="tv_pick_city_label">Select City or Airport</string>
     <string name="tv_recent_search_label">Recent Searches</string>
     <string name="btn_clear_recent_search_label">Clear</string>
+
+    <!-- Item Ticket   -->
+    <string name="tv_airplane_id">RW225, RW752</string>
+    <string name="tv_departure_time">08:15</string>
+    <string name="tv_arrive_time">09:05</string>
+    <string name="tv_departure_city_code_label">YIA</string>
+    <string name="tv_arrive_city_code_label">BPN</string>
+    <string name="tv_direct_time">1h 50m</string>
+    <string name="tv_price_ticket">IDR 1.179.200/pax</string>
+    <string name="tv_point">10000 Loyalty Points</string>
+
+    <!-- Selected Ticket Card    -->
+    <string name="tv_date_departure">Thursday, 31 January 2024</string>
+    <string name="tv_date_month">25 Jan</string>
+    <string name="tv_departure_city">Yogyakarta (YIA)</string>
+    <string name="tv_arrive_city">Balikpapan (BPN)</string>
+    <string name="tv_departure_airport_name">Yogyakarta International Airport | Terminal Domestic</string>
+    <string name="tv_arrive_airport_name">Sepinggan | Terminal Domestic</string>
+    <string name="tv_nama_maskapai">Rajawali Air</string>
+    <string name="tv_ticket_detail">RW-225 | Economy | 1h 50m</string>
+    <string name="tv_baggage">Cabin baggage 7kg\nBaggage 20 kg</string>
+    <string name="tv_food">In-flight meals</string>
+
+    <!-- Ticket Type   -->
+    <string name="tv_ticket_type">Normal</string>
+    <string name="tv_total_price">IDR 2.358.400</string>
+    <string name="tv_safe_total_price">IDR 2.658.400</string>
+    <string name="tv_safe">Safe</string>
+
+    <!--  Your Selected Flight  -->
+    <string name="tv_departure">Yogyakarta</string>
+    <string name="tv_arrive">Balikpapan</string>
+    <string name="tv_passenger">2 Adults</string>
 </resources>
