--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="tv_choose_ticket_flight_route">%1$s ➜ %2$s</string>
     <string name="tv_choose_ticket_flight_route_description">%1$s | %2$s | %3$s</string>
     <string name="tv_choose_ticket_departure_schedule_label">Departure Schedule</string>
+    <string name="tv_choose_ticket_return_schedule_label">Return Schedule</string>
 
 
     <!--  menu home page  -->
@@ -85,6 +86,7 @@
     <!--  Select city  -->
     <string name="tv_pick_city_label">Select City or Airport</string>
     <string name="tv_recent_search_label">Recent Searches</string>
+    <string name="tv_search_not_found">City is not found</string>
     <string name="btn_clear_recent_search_label">Clear</string>
 
     <!--  passenger  -->
@@ -115,8 +117,8 @@
     <string name="tv_departure_city_code_label">YIA</string>
     <string name="tv_arrive_city_code_label">BPN</string>
     <string name="tv_direct_time">1h 50m</string>
-    <string name="tv_price_ticket">IDR 1.179.200/pax</string>
-    <string name="tv_point">10000 Loyalty Points</string>
+    <string name="tv_price_ticket">IDR %1$d</string>
+    <string name="tv_point">%1$d Loyalty Points</string>
 
     <!-- Selected Ticket Card    -->
     <string name="tv_date_departure">Thursday, 31 January 2024</string>
@@ -160,7 +162,7 @@
 
     <!--  Details Information  -->
     <string name="tv_departure_date">Thu, 25 Jan 2024</string>
-    <string name="tv_direct_flight">08:15 - 09:05 | Direct Flight</string>
+    <string name="tv_direct_flight">08:15 – 09:05 | Direct Flight</string>
     <string name="tv_passenger_detail">Passenger 1 (Adult)</string>
     <string name="tv_passenger_detail_other">Passenger 2 (Adult)</string>
 
@@ -195,7 +197,7 @@
     <string name="_3_meals_idr_146_000">3 Meals (IDR 146.000)</string>
     <string name="passenger_2_adult">Passenger 2 (Adult)</string>
     <string name="no_orders_yet">No orders yet</string>
-    <string name="_25_jan_2024_08_15_09_05_1h_50m">25 Jan 2024, 08:15 - 09:05 | 1h 50m</string>
+    <string name="_25_jan_2024_08_15_09_05_1h_50m">25 Jan 2024, 08:15 – 09:05 | 1h 50m</string>
     <string name="vegetarian_lasagna">Vegetarian Lasagna</string>
     <string name="vegetarian_lasagna_with_tomato_sauce_nand_parsley">Vegetarian lasagna with tomato sauce\nand parsley.</string>
     <string name="idr_55_500">IDR 55.500</string>
