--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -194,7 +194,7 @@
         <!--  Details Information  -->
         <string name="tv_departure_date">Thu, 25 Jan 2024</string>
         <string name="tv_direct_flight">08:15 – 09:05 | Direct Flight</string>
-        <string name="tv_passenger_detail">Passenger 1 (Adult)</string>
+        <string name="tv_passenger_detail">Passenger %1$d (%2$s)</string>
         <string name="tv_passenger_detail_other">Passenger 2 (Adult)</string>
 
         <!-- Radio Button   -->
@@ -228,6 +228,7 @@
         <string name="_3_meals_idr_146_000">3 Meals (IDR 146.000)</string>
         <string name="passenger_2_adult">Passenger 2 (Adult)</string>
         <string name="no_orders_yet">No orders yet</string>
+        <string name="got_orders">%1$d orders (IDR %2$d)</string>
         <string name="_25_jan_2024_08_15_09_05_1h_50m">25 Jan 2024, 08:15 – 09:05 | 1h 50m</string>
         <string name="vegetarian_lasagna">Vegetarian Lasagna</string>
         <string name="vegetarian_lasagna_with_tomato_sauce_nand_parsley">Vegetarian lasagna with tomato sauce\nand parsley.</string>
